
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int temp ;


 int BUFSIZE ;
 int atol (char*) ;
 int exit (int ) ;
 int memset (char*,int ,int) ;
 int printf (char*) ;
 int printresponse (char*) ;
 scalar_t__ recv (int,char*,int,int ) ;

void relay(int sock) {
 while(1) {
  char temp[BUFSIZE];
  memset(temp,0,sizeof(temp));
  if (recv(sock,temp,sizeof(temp),0) <= 0) {
   printf("Server vulnerable (crashed)\n");
   exit(0);
  }
  printresponse(temp);
  if (atol(temp) == 553) {
   printf("Not exploitable\n");
   exit(0);
  }
 }
}
