; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_24.c_relay.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_24.c_relay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFSIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"Server vulnerable (crashed)\0A\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"Not exploitable\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @relay(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  br label %5

5:                                                ; preds = %1, %26
  %6 = load i32, i32* @BUFSIZE, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %3, align 8
  %9 = alloca i8, i64 %7, align 16
  store i64 %7, i64* %4, align 8
  %10 = trunc i64 %7 to i32
  %11 = call i32 @memset(i8* %9, i32 0, i32 %10)
  %12 = load i32, i32* %2, align 4
  %13 = trunc i64 %7 to i32
  %14 = call i64 @recv(i32 %12, i8* %9, i32 %13, i32 0)
  %15 = icmp sle i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %5
  %17 = call i32 @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %18 = call i32 @exit(i32 0) #4
  unreachable

19:                                               ; preds = %5
  %20 = call i32 @printresponse(i8* %9)
  %21 = call i32 @atol(i8* %9)
  %22 = icmp eq i32 %21, 553
  br i1 %22, label %23, label %26

23:                                               ; preds = %19
  %24 = call i32 @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %25 = call i32 @exit(i32 0) #4
  unreachable

26:                                               ; preds = %19
  %27 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %27)
  br label %5
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memset(i8*, i32, i32) #2

declare dso_local i64 @recv(i32, i8*, i32, i32) #2

declare dso_local i32 @printf(i8*) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

declare dso_local i32 @printresponse(i8*) #2

declare dso_local i32 @atol(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
